--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,10 @@
-images/* linguist-documentation
-hardware/* linguist-documentation
+*.doc   diff=astextplain
+*.DOC   diff=astextplain
+*.docx  diff=astextplain
+*.DOCX  diff=astextplain
+*.dot   diff=astextplain
+*.DOT   diff=astextplain
+*.pdf   diff=astextplain
+*.PDF   diff=astextplain
+*.rtf   diff=astextplain
+*.RTF   diff=astextplain
